<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_share_group_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.liveasy.ShareGroupCode">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:id="@+id/group_id"
        android:text="Group ID Here"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/group_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_layout">

        <Button
            android:text="Copy To Clipboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clipboard"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:onClick="copyToClipboard"/>
    </LinearLayout>
</RelativeLayout>
